tests/cases/error/error_failing_instruction.out
[1;34m[[0m[1;31mE[0m[1;34m][0m Error: No such file or directory (os error 2)
error: Error while executing instruction
 --> tests/cases/error/error_failing_instruction.rapt:1:1
  |
1 | RUN /missing
  | ^^^^^^^^^^^^ Sandbox request error: Sandbox error: ENOENT: No such file or directory
2 |
  |
